--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
 <header>
       <h1>Rocket <span> Coffee </span></h1>
-      <p>Aberdo tofos os dias. 8h-21h</p>
+      <p>Aberdo todos os dias. 8h-21h</p>
 </header>
   <Section>
       <h2>Brunch</h2>
@@ -23,7 +23,7 @@
         <li>
           <div class="details">
             <h3>X Bacon</h3>
-            <p>Pão,Hamburg,Bacon,Cebola Caramelizada,Requeijão Cremoso,Maionese de ervas.
+            <p>Pão,Hamburguer,Bacon,Cebola Caramelizada,Requeijão Cremoso,Maionese de ervas.
             </p>
           </div>
           <strong class="price">
@@ -34,7 +34,7 @@
          <li>
           <div class="details">
             <h3>X Tudo</h3>
-            <p>Pão,02 Hamburg,Bacon,Cebola Caramelizada,frango,Maionese de ervas,Requeijão cremoso,Lombo de Porco, Contra file.
+            <p>Pão,02 Hamburguer,Bacon,Cebola Caramelizada,frango,Maionese de ervas,Requeijão cremoso,Lombo de Porco, Contra file.
             </p>
           </div>
           <strong class="price">
@@ -44,7 +44,7 @@
         <li>
           <div class="details">
             <h3>X Corinthians</h3>
-            <p>Pão,03 Hamburg,Bacon,Maionese de ervas,Requeijão cremoso,Cebola caramelizada.
+            <p>Pão,03 Hamburguer,Bacon,Maionese de ervas,Requeijão cremoso,Cebola caramelizada.
             </p>
           </div>
           <strong class="price">
